# track

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  track_vst3_helper
.cache/clangd/index/: AlternateSet.hh.A34458BBFF3484BA.idx  AlternateSubst.hh.FEBDA23CFE93E491.idx  AlternateSubstFormat1.hh.15009097AC2484AB.idx  Anchor.hh.2A90CEA06D9DA0D4.idx  AnchorFormat1.hh.B860B14D4F3051C2.idx  AnchorFormat2.hh.F57573A8109254D7.idx  AnchorFormat3.hh.6C673CDF762D708C.idx  AnchorMatrix.hh.116AF1AF8371A641.idx  BidiChain.c.6CE98E16E0D414BE.idx  BidiChain.h.363AB47568CD4AC4.idx  BidiTypeLookup.c.7C2FB8921DEF8CBB.idx  BidiTypeLookup.h.640D091C6544AAC1.idx  Box2D.h.A397394AC0057BB2.idx  BracketQueue.c.C12A4B3F7C58EF27.idx  BracketQueue.h.A6B983E55652F885.idx  BracketType.h.E21185CC85CAE1AC.idx  CBDT.hh.53931AF97889881A.idx  COLR.hh.EDC3A14C2EDF6B22.idx  CPAL.hh.18C2D5A8CC8BB5A5.idx  ChainContextPos.hh.7212BD3CADBBACED.idx  ChainContextSubst.hh.4C62FA4C26DE0596.idx  Common.hh.2AA6C1F9848FD5B4.idx  Common.hh.57E9EC7B33DED9C8.idx  CompositeGlyph.hh.63C8E69432DA776C.idx  ContextPos.hh.991EB81E956314F1.idx  ContextSubst.hh.1C21A9B570B5C057.idx  Coverage.hh.FE4C09A9E9D6E422.idx  CoverageFormat1.hh.8EB300859E6D1542.idx  CoverageFormat2.hh.4766016968E08770.idx  CursivePos.hh.047F706C8B287234.idx  CursivePosFormat1.hh.A388EC15B213FCF7.idx  ExtensionPos.hh.CA6BD699877090A8.idx  ExtensionSubst.hh.F0265B5AE0E467A2.idx  GDEF.hh.8E11009929B88D76.idx  GPOS.hh.78CBF8EB9665D093.idx  GSUB.hh.C1F1980EB12A437D.idx  GeneralCategoryLookup.c.F32DD607EF7AAA24.idx  GeneralCategoryLookup.h.4E69EF88F6CF7E44.idx  Glyph.hh.63246EB287DEA334.idx  GlyphHeader.hh.3BA42E842F02C916.idx  (+1954 more)
src/: editor.cpp  editor.h  lookandfeel.cpp  lookandfeel.h  processor.cpp  processor.h
src/daw/: automation_relay.cpp  automation_relay.h  clipboard.cpp  clipboard.h  defs.cpp  defs.h  playhead.cpp  playhead.h  plugin_chain.cpp  plugin_chain.h  subwindow.cpp  subwindow.h  timeline.cpp  timeline.h  track.cpp  track.h  transport_status.cpp  transport_status.h  utility.cpp  utility.h
